tests/test_enum/bad/useless_wildcard.catala_en
## Useless wildcard

```catala
declaration enumeration E:
  -- Case1
  -- Case2

declaration scope A:
  context output x content E
  context output y content integer

scope A:
  definition x equals Case1
  definition y equals match x with pattern
    -- Case1 : 42
    -- Case2 : 42
    -- anything : 31
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
